# TestingLegacyCodeCourse.cpp

./: .clang-format  .gitignore  CMakeLists.txt  Catch2Tests.runsettings  README.md  build-and-test.ps1
Resources/: 01 Course Introduction.pptx  02 Mobbing Introduction.pptx  03 Testing Functional Code Retro.pptx  04 Approval Testing Retro.pptx  CMakeLists.txt  Mobbing Introduction.pptx  Retro 1 - Testing Functional Code.pptx  course.md  course1.md  course2.md  course3.md  course4.md  day_of_checklist.md  deploy_course.md  experiments.ps1  install_cpp_clion_visual_studio.ps1  install_pre_class_machine.ps1  install_script.ps1  install_script_example.ps1  manual_post_install_steps.md  notes.md  post_course_checklist.md  post_install_script.ps1  slides.pptx  ~$slides.pptx
Resources/instructor_notes/: day_of_checklist.md  (+2 more)
exercises/: CMakeLists.txt
exercises/exercise1/tests/: CMakeLists.txt  LegacyTest.cpp  Samples.cpp  Samples.h  Test.Approve_Atan2_-_all_values.approved.txt  Test.Approve_Cos.approved.txt  Test.Approve_Sin.approved.txt  Test.Approve_everything_-_for_1.0.approved.txt  Test.Approve_everything_-_for_1.0_and_3.14.approved.txt  Test.Approve_everything_-_for_3.14.approved.txt  Test.Combination_approvals_-_for_one_input.approved.txt  Test.Combination_approvals_-_function_pointer_inputs.approved.txt  Test.Test_Cos.approved.txt  Test.Test_Everything.approved.txt  Test.Test_Everything_3.14.approved.txt  Test.Test_Everything_For_both_values.approved.txt  Test.Test_Everything_For_important_values.approved.txt  Test.Test_Everything_With_Combinations.approved.txt  Test.Test_Everything_With_Combinations_and_Method_Pointers.approved.txt  Test.Test_Everything_With_Combinations_for_Atan2.approved.txt  Test.Test_Sin.approved.txt  Test.cpp  TrigMathApprovalTests.ApprovalTest_All.approved.txt  TrigMathApprovalTests.ApprovalTest_Cos.approved.txt  TrigMathApprovalTests.ApprovalTest_Everything_1.0.approved.txt  TrigMathApprovalTests.ApprovalTest_Everything_3.14.approved.txt  TrigMathApprovalTests.ApprovalTest_RunEverything.approved.txt  TrigMathApprovalTests.ApprovalTest_RunEverything3.14.approved.txt  TrigMathApprovalTests.ApprovalTest_Sin.approved.txt  TrigMathApprovalTests.ApprovalTest_all_maths.approved.txt  TrigMathApprovalTests.ApprovalTest_everything.approved.txt  TrigMathApprovalTests.ApprovalTest_everything_PI.approved.txt  TrigMathApprovalTests.ApprovalTest_runEverything(3.14).approved.txt  TrigMathApprovalTests.ApprovalTest_runEverything.approved.txt  TrigMathApprovalTests.ApprovalTest_run_everything.approved.txt  TrigMathApprovalTests.ApprovalTest_run_everything_combined.approved.txt  TrigMathApprovalTests.ApprovalTest_run_everything_with_pi.approved.txt  TrigMathApprovalTests.ApprovalTest_verifyAll.approved.txt  TrigMathApprovalTests.CombinationVerifyAll_Atan2.approved.txt  TrigMathApprovalTests.CombinationVerifyAll_Sin.approved.txt  (+7 more)
exercises/exercise2/code/: CMakeLists.txt  Inconsistent.h  InitialiseSystem.h  Legacy.h  MissingInputs.h  Services.h  SideEffects.h  SystemConfiguration.h  third_party_code.h
exercises/exercise2/tests/: CMakeLists.txt  InconsistentTests.Peel_print.approved.txt  InconsistentTests.Poke_print.approved.txt  InconsistentTests.Scrub_print.approved.txt  InconsistentTests.cpp  LoggingTests.Test_initialiseServices.approved.txt  LoggingTests.Test_initialiseServices.received.txt  LoggingTests.Test_initialiseServices2.approved.txt  LoggingTests.Test_initialiseServices_2.approved.txt  LoggingTests.cpp  MissingInputsTests.cpp  Samples.h  SideEffectsTests.Test_SideEffects.approved.txt  SideEffectsTests.Test_SideEffects_with_stream.approved.txt  SideEffectsTests.cpp  SystemConfigurationTests.After_Gravity.approved.txt  SystemConfigurationTests.Initialise_system.approved.txt  SystemConfigurationTests.Second_test.approved.txt  SystemConfigurationTests.Test_System_Configuration_1.approved.txt  SystemConfigurationTests.Test_System_Configuration_2.approved.txt  SystemConfigurationTests.Test_System_Configuration_No_Gravity.approved.txt  SystemConfigurationTests.cpp  SystemConfigurationTests.generate_code.approved.txt  SystemConfigurationTests.gravity_off.approved.txt  SystemConfigurationTests.hgfhgfhgTest_System_Configuration_2.approved.txt  ValidateDevelopmentEnvironment.Validate_Development_Environment.approved.txt  ValidateDevelopmentEnvironment.cpp  main.cpp
exercises/test_helpers/: CLionHardCodedReporter.cpp  CLionHardCodedReporter.h  CMakeLists.txt
(+4 files in other folders)
